--- a/Rust/Cargo.toml
+++ b/Rust/Cargo.toml
@@ -2,5 +2,16 @@
 name = "Rust"
 version = "0.1.0"
 edition = "2021"
+opt-level = 3
+lto = true
+codegen-units = 1
 
 [dependencies]
+tokio = { version = "1.29", features = ["full"] }
+tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
+url = "2.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+futures-util = "0.3"
+tokio-native-tls = "0.3"
+chrono = "0.4"
