--- a/Rust/Cargo.toml
+++ b/Rust/Cargo.toml
@@ -15,3 +15,6 @@ serde_json = "1.0"
 futures-util = "0.3"
 tokio-native-tls = "0.3"
 chrono = "0.4"
+simd-json = "0.13" 
+warp = "0.3.7"
+lazy_static = "1.5"
